<resources>
    <string name="app_name">GooRu</string>
    <string name="entrance">Вход</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="Enter">Войти</string>
    <string name="auth">Авторизоваться</string>
    <string name="registration">Регистрация</string>
    <string name="progress_en">Progress</string>
    <string name="month">/мес</string>
    <string name="which_includes">Что включает:</string>
    <string name="rub">Р</string>
    <string name="repeat_password">Повторить пароль</string>
    <string name="reset_password">Сбросить пароля</string>
    <string name="load_error">Проверте состояние сети, и повторите попытку</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="title_contact">Контактные данные</string>
    <string name="phone_number">Номер телефона</string>
    <string name="title_person">Персональные данные</string>
    <string name="change_password">Сменить пароль</string>
    <string name="activate_subscription">Активировать подписку</string>
    <string name="edit">Редактировать</string>
    <string name="edit_person_data">Редактирование персональных данных</string>
    <string name="save">Сохранить</string>
    <string name="link_to_source">Ссылка на источник</string>
    <string name="compass">COMPASS GOORU</string>
    <string name="parsing">PARSING</string>
    <string name="offer_start">Нажимая кнопку «Зарегистрироваться», я даю согласие на обработку персональных данных, соглашаюсь с тарифами и правилами </string>
    <string name="offer_end"> публичной оферты </string>
    <string name="bad_parameters">Невозможно войти с предоставленными учетными данными</string>
    <string name="bad_parameters_registration">Невозможно зарегестрироваться с предоставленными учетными данными</string>
    <string name="password_helper">* Пароль доржен:\n
        - состоять из цифр и латинских букв;\n
        - быть не короче 8-ми символов;\n
        - содержать хотя бы 1 заглавную букву;\n
        - содержать хотя бы 1 строчную букву;\n
        - содержать хотя бы 1 цифру;</string>
    <string name="new_source">Новый источник</string>
    <string name="new_ticket">Создать oбращение</string>
    <string name="design">Оформить</string>
    <string name="edit_1">Сменить</string>

    <string-array name="popular_parsing">
        <item>Поиск работы специалистов</item>
        <item>Новости дня в стране и мире</item>
        <item>Книжные новинки</item>
        <item>Ежедневный гороскоп</item>
        <item>Финансовый отчет</item>
        <item>Лекарственные средства</item>
        <item>Адресса для почтовых рассылок</item>
        <item>Горячие обеды быстро</item>
    </string-array>

    <string-array name="auth_group">
        <item>Вход</item>
        <item>Регистрация</item>
    </string-array>

    <string-array name="par_source">
        <item>Мои Парсеры</item>
        <item>Избранное</item>
    </string-array>


    <string-array name="them_ticket">
        <item>Мои Парсеры</item>
        <item>Вопросы к менеджеру</item>
        <item>Оплата</item>
        <item>Новый  заказ</item>
        <item>Безопасность</item>
        <item>Сотрудничество</item>
        <item>Ошибки приложения</item>
        <item>Другое</item>

    </string-array>


</resources>