<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".feature.presentation.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="360dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle_person">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        tools:text="Матвей"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/last_name"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Иванов"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@id/first_name" />

    <TextView
        android:id="@+id/subtitle_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/subtitle"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintStart_toStartOf="@+id/first_name" />

    <TextView
        android:id="@+id/subtitle_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/subtitle"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/last_name"
        app:layout_constraintStart_toStartOf="@+id/last_name" />

    <TextView
        android:id="@+id/subtitle_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/e_mail"
        android:textColor="@color/subtitle"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/title_contact" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="ivanov_marat@cosmos.ru"
        app:layout_constraintStart_toStartOf="@+id/subtitle_email"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_email" />

    <TextView
        android:id="@+id/title_contact"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginVertical="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/subtitle_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone_number"
        android:textSize="13sp"
        android:textColor="@color/subtitle"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="+7(999)-999-99-99"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_phone" />

    <TextView
        android:id="@+id/tittle_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_person"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/person_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/tittle_person"
        app:layout_constraintStart_toEndOf="@+id/tittle_person"
        app:layout_constraintTop_toTopOf="@+id/tittle_person"
        app:tint="@color/subtitle" />

    <ImageView
        android:id="@+id/contact_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/title_contact"
        app:layout_constraintStart_toEndOf="@+id/title_contact"
        app:layout_constraintTop_toTopOf="@+id/title_contact"
        app:tint="@color/subtitle" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_password"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/activate_subscription_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/activate_subscription"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/user_tariff"
        android:layout_marginHorizontal="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tariff_name"
                tools:text="Фриланс"
                android:gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/start_date"
                tools:text = "10.01.2023"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/finish_date"
                tools:text = "10.01.2023"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>