<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="255dp"
    app:cardCornerRadius="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="6dp"
    android:layout_height="465dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextFAQ.Subtitle"
            tools:text="Профессиональный" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextFAQ.Title"
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="$28" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextFAQ.Subtitle"
                android:text="@string/month"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_includes"
            style="@style/TextFAQ.Subtitle"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            android:id="@+id/buy_button"
            style="@style/Button.Standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="22dp"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/design" />

    </LinearLayout>


</androidx.cardview.widget.CardView>